fix word wrap

--- a/src/css/common/ButtonNoneBorder.scss
+++ b/src/css/common/ButtonNoneBorder.scss
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   color: $font-color;
   cursor: pointer;
+  flex-shrink: 0;
   font-size: 0.9rem;
   min-width: fit-content;
   padding: 5px 10px;
