--- a/src/css/label/LabelEditRow.scss
+++ b/src/css/label/LabelEditRow.scss
@@ -31,11 +31,13 @@
 .labelEditNameContainer {
   flex: 1;
   outline: none;
+  max-width: 80%;
   word-break: break-word;
   &__name {
     cursor: pointer;
     margin: 0;
     width: fit-content;
+    word-wrap: break-word;
     &:hover {
       color: $pink;
     }
