--- a/src/css/list/ListName.scss
+++ b/src/css/list/ListName.scss
@@ -11,5 +11,6 @@
   font-weight: bold;
   flex: 1;
   margin-right: 10px;
-  word-break: break-word;
+  max-width: 85%;
+  word-wrap: break-word;
 }
