--- a/src/css/search/SearchCard.scss
+++ b/src/css/search/SearchCard.scss
@@ -9,7 +9,7 @@
     font-weight: bold;
     margin-bottom: 2px;
     margin-left: 3px;
-    word-break: break-word;
+    word-wrap: break-word;
   }
 }
 
